[tool.poetry]
name = "cashmere"
version = "0.1.0"
description = "Cashmere is an async-python library built to enable a light-weight event driven communication architecture."
authors = ["George Mathews <geomatthews@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
aiobotocore = "^2.13.1"
pydantic = "^2.8.2"
typing-extensions = "^4.12.2"
anyio = "^4.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.1"
ruff = "^0.5.1"
black = "^24.4.2"
isort = "^5.13.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = "^(.*\\.md|.*\\.yaml|.*\\.lock|.*\\.ini)$"

[tool.ruff]
extend-exclude = ["*.yaml", "poetry.lock", "pyproject.toml", "README.md"]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"